# states-rs

./: Cargo.toml  README.MD
.github/workflows/: rust.yml
src/: lib.rs  registry.rs  slot.rs  state.rs
