[package]
authors = ["Markus Hadenfeldt <mhadenfeldt@did.science>"]
homepage = "https://github.com/WolverinDEV/states-rs"
license-file = "LICENSE"
description = "A lightweight, type-safe registry for managing cached and self-initializing states."

name = "states"
version = "0.1.1"
edition = "2021"

[dependencies]
hashbrown = "0.16.0"
